--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "p1": "echo '1231231231'"
   },
   "eslintConfig": {
     "extends": [
@@ -43,14 +44,9 @@
     ]
   },
   "devDependencies": {
-    "husky": ">=6",
+    "husky": "^7.0.4",
     "lint-staged": ">=10",
     "prettier": "2.4.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.{js,css,md,ts,tsx}": "prettier --write"
