--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install",
-    "p1": "echo '1231231231'"
+    "json-server": "json-server __json_server_mock__/db.json --watch"
   },
   "eslintConfig": {
     "extends": [
@@ -44,7 +44,10 @@
     ]
   },
   "devDependencies": {
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
     "husky": "^7.0.4",
+    "json-server": "^0.17.0",
     "lint-staged": ">=10",
     "prettier": "2.4.1"
   },
