--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install",
-    "json-server": "json-server __json_server_mock__/db.json --watch"
+    "json-server": "json-server __json_server_mock__/db.json --watch --port 3001"
   },
   "eslintConfig": {
     "extends": [
@@ -46,10 +46,13 @@
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.4",
     "json-server": "^0.17.0",
     "lint-staged": ">=10",
-    "prettier": "2.4.1"
+    "prettier": "2.4.1",
+    "prettier-eslint": "^13.0.0"
   },
   "lint-staged": {
     "*.{js,css,md,ts,tsx}": "prettier --write"
